--- a/ios-developer.html
+++ b/ios-developer.html
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SFL/743999692218326-ios-developer'>SFL iOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SFL/743999692218326-ios-developer'>SFL iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -96,7 +96,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/helbiz/347a91c8-3292-4026-becc-01ca108c3dd9'>Helbiz Inc. - Junior IOS Developer - New York City</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/347a91c8-3292-4026-becc-01ca108c3dd9'>Helbiz Inc. - Junior IOS Developer - New York City</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -161,7 +161,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p>1 day ago ... We are looking for talented mid-level to senior iOS developers. What we offer. 
 Tired of spending your valuable time dealing with clients directly, estimating,?...</p>
 <hr/>
-<h5><a href='https://semios.workable.com/j/0DEDF410CE'>Semios - Jobs: Embedded Software Developer Co-op - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semios.workable.com/j/0DEDF410CE'>Semios - Jobs: Embedded Software Developer Co-op - Apply online</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -212,7 +212,7 @@ Boston, Massachusetts. Review all of the job details and apply today!</p>
 building the fastest growing app out of SEA in 2018 we're now providing white-
 label.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/29EBB90174'>Crisalix - Jobs: iOS Mobile App Developer - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/29EBB90174'>Crisalix - Jobs: iOS Mobile App Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 8, 2019 ... Apply online for the job of iOS Mobile App Developer at Crisalix.</p>
 <hr/>
@@ -220,7 +220,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of JavaScript Developer at Semios.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wheely.workable.com/jobs/1068050'>iOS Developer - Apply online - Wheely - Jobs</a></h5> 
+<h5><a href='https://wheely.workable.com/jobs/1068050'>iOS Developer - Apply online - Wheely - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 ???? ????? ... Apply online for the job of iOS Developer at Wheely.</p>
 <hr/>
@@ -244,7 +244,7 @@ label.</p>
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TechnoConsulting/743999691969821-ios-app-developer'>TechnoConsulting iOS App Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TechnoConsulting/743999691969821-ios-app-developer'>TechnoConsulting iOS App Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco Santiago San Francisco, California</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -252,7 +252,7 @@ label.</p>
 <p><span class="badge badge-light">Austin, TX Melbourne</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vpTech/357c22fd-fdc3-446e-87c1-0edeaf54f5a1'>vpTech - iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/357c22fd-fdc3-446e-87c1-0edeaf54f5a1'>vpTech - iOS Developer</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -292,7 +292,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/griddynamics/job/oeoS9fwn'>Grid Dynamics Careers - iOS/C++ Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/griddynamics/job/oeoS9fwn'>Grid Dynamics Careers - iOS/C++ Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
