--- a/machine.html
+++ b/machine.html
@@ -43,7 +43,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPW9Vfwz&k=Job&j=ozyv9fwv&__jvst=Employee&__jvsd=sa5Jzgwi&__jvsc=Twitter&bid=nBLeWLwM'>Splunk Careers - Senior Software Engineer in Test - Machine Learning</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPW9Vfwz&k=Job&j=ozyv9fwv&__jvst=Employee&__jvsd=sa5Jzgwi&__jvsc=Twitter&bid=nBLeWLwM'>Splunk Careers - Senior Software Engineer in Test - Machine Learning</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
@@ -82,7 +82,7 @@ SmartNews, Inc.</p>
 <p>1 day ago ... ... as the most innovative company in Latin America and ranked no. 36 on Fast 
 Company' 50 Most Innovative Companies ranking. Our Data Scientist Chapter?...</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/2381671B43'>SmartNews, Inc. - Jobs: Principal/Senior Staff Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/2381671B43'>SmartNews, Inc. - Jobs: Principal/Senior Staff Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -194,7 +194,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999692174993-machine-learning-ai-architect'>CapTech Consulting Machine Learning &amp; AI Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999692174993-machine-learning-ai-architect'>CapTech Consulting Machine Learning &amp; AI Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -278,7 +278,7 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p>1 day ago ... This position requires extensive background and knowledge in machine learning 
 and data science. A successful candidate should also have previous?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4364057002'>Job Application for Data Scientist, Applied Machine Learning - Bay Area at Tempus</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tempus/jobs/4364057002'>Job Application for Data Scientist, Applied Machine Learning - Bay Area at Tempus</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -306,7 +306,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/qualtrics/jobs/1774038'>Job Application for iQ Machine Learning Engineer - Seattle  at Qualtrics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/qualtrics/jobs/1774038'>Job Application for iQ Machine Learning Engineer - Seattle  at Qualtrics</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -314,7 +314,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://codete.workable.com/j/7FB9A1FA62?viewed=true'>Codete - Jobs: Senior Machine Learning Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://codete.workable.com/j/7FB9A1FA62?viewed=true'>Codete - Jobs: Senior Machine Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Senior Machine Learning Engineer at Codete.</p>
 <hr/>
@@ -397,7 +397,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/siftscience/jobs/1771754'>Job Application for Senior Software Engineer - Machine Learning Platform at Sift </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/siftscience/jobs/1771754'>Job Application for Senior Software Engineer - Machine Learning Platform at Sift </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -434,7 +434,7 @@ Position] at Mercari, inc.</p>
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1766303'>Job Application for Research Scientist (Machine Learning/Deep ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1766303'>Job Application for Research Scientist (Machine Learning/Deep ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 7, 2019 ... You're a research scientist who has published in top tier conferences and are 
 passionate about having a positive impact on the world. You are enthusiastic?...</p>
