--- a/project-manager.html
+++ b/project-manager.html
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Leidos1/743999692430063-project-manager'>Leidos Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Leidos1/743999692430063-project-manager'>Leidos Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canberra</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -166,7 +166,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://cbre.referrals.selectminds.com/jobs/sr-project-manager-58452'>Sr Project Manager - CBRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbre.referrals.selectminds.com/jobs/sr-project-manager-58452'>Sr Project Manager - CBRE Careers</a></h5> 
 <p><span class="badge badge-light">Atlanta, Georgia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -275,7 +275,7 @@ support our Orlando, Florida office. The ideal candidate would be an Engineer or
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284472-it-project-manager-rm4000-per-month-mid-senior-level-'>Seeka Technology IT Project Manager (RM4000 per month)( Mid-Senior Level) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284472-it-project-manager-rm4000-per-month-mid-senior-level-'>Seeka Technology IT Project Manager (RM4000 per month)( Mid-Senior Level) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -289,7 +289,7 @@ support our Orlando, Florida office. The ideal candidate would be an Engineer or
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://unicepta.softgarden.io/job/4505089/Project-Manager-Media-Monitoring-w-m-d-?jobDbPVId=12310449&amp;l=de'>Project Manager Media Monitoring (w/m/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://unicepta.softgarden.io/job/4505089/Project-Manager-Media-Monitoring-w-m-d-?jobDbPVId=12310449&amp;l=de'>Project Manager Media Monitoring (w/m/d)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -347,7 +347,7 @@ Dublin, Ireland. IT/Technical & Product Development. Requisition #:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 21, 2019 ... Apply online for the job of Project Manager, Senior at WWC.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/B6063F06BE'>Vision++ - Jobs: Project Manager - Computer Vision - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/B6063F06BE'>Vision++ - Jobs: Project Manager - Computer Vision - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... Apply online for the job of Project Manager - Computer Vision at Vision++.</p>
 <hr/>
@@ -364,7 +364,7 @@ Brasil.</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://cbre.referrals.selectminds.com/jobs/program-manager-remote-57776'>Program Manager - Remote - CBRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbre.referrals.selectminds.com/jobs/program-manager-remote-57776'>Program Manager - Remote - CBRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Thanks for your interest in the Program Manager - Remote position. Unfortunately 
 this position has been closed but you can search our 2,156 open jobs by?...</p>
@@ -379,7 +379,7 @@ focusing on a mixture of E-Commerce, Travel, Hospitality and...</p>
 <p>2 days ago ... Nokia Software is looking to hire a Senior Project Manager that is up for a serious 
 challenge, willing to step out of their comfort zone and approach every day?...</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/project-manager-pmp-empiria-global-25135'>Project Manager - PMP Emperia Global - ELSEVIER Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/project-manager-pmp-empiria-global-25135'>Project Manager - PMP Emperia Global - ELSEVIER Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... The Project Manager will play a key role in a global initiative to standardize and 
 scale our customer scanning tools. Our digital tools maximize the value of?...</p>
@@ -462,7 +462,7 @@ through?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/shiftdigital/job/oHZCafwc'>Shift Digital Careers - Digital Program Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/shiftdigital/job/oHZCafwc'>Shift Digital Careers - Digital Program Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
